--- a/web/index.html
+++ b/web/index.html
@@ -168,13 +168,14 @@
 			<div class="container">
 				<div class="row text-center">
 					<div class="col-4" style="padding-right: 20px; padding-left: 20px">
-						<img src="imgs/DrKetan.svg">
+						<div style=" background-image: url('DrKetan.png');"></div>
+						<!-- <img src="imgs/DrKetan.png"> -->
 					</div>
 					<div class="col-4" style="padding-right: 20px; padding-left: 20px">
-						<img src="imgs/DrKetan.svg">
+						<img src="imgs/DrKetan.png">
 					</div>
 					<div class="col-4" style="padding-right: 20px; padding-left: 20px">
-						<img src="imgs/DrKetan.svg">
+						<img src="imgs/DrKetan.png">
 					</div>
 				</div>
 			</div>
